--- a/css/styles5.css
+++ b/css/styles5.css
@@ -9,7 +9,6 @@ body {
 h1 {
     font-style: garamond;
     text-align: center;
-
 }
 
 header {
@@ -55,13 +54,14 @@ header {
     text-align: center;
 }
 span{
-    color: rgb(83, 182, 59);
+    color: rgb(58, 74, 145);
 }
-
+#md{
+    color: rgb(163, 15, 15);
+}
 img {
     display: block;
     margin: 0 auto;
-    width: 75%;
 }
 
 ul {
@@ -77,7 +77,6 @@ ul li {
 h2 {
     text-align: center;
 }
-
 footer {
 	background-color:#000000;
 	color: #fff;
@@ -92,4 +91,3 @@ footer {
     height: auto; 
     margin-right: 10px; 
 }
-
