--- a/css/styles6.css
+++ b/css/styles6.css
@@ -11,6 +11,10 @@ h1 {
     text-align: center;
 
 }
+h2{
+    border: 10px double rgb(38, 61, 33);
+    
+}
 
 header {
     background-color:#016817;
@@ -77,7 +81,9 @@ ul li {
 h2 {
     text-align: center;
 }
-
+iframe{
+    margin: auto;
+}
 footer {
 	background-color:#000000;
 	color: #fff;
@@ -92,4 +98,3 @@ footer {
     height: auto; 
     margin-right: 10px; 
 }
-
